--- a/src/components/EventItem.module.css
+++ b/src/components/EventItem.module.css
@@ -1,7 +1,12 @@
 .event {
   max-width: 50rem;
   margin: 2rem auto;
-  text-align: center;
+  text-align: left;
+  padding: 1rem;
+  border: 1px solid var(--color-gray-300);
+  border-radius: 4px;
+  background-color: var(--color-gray-900);
+
 }
 
 .event img {
